--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev ; python3 scripts/doctor_firefox_manifest.py; python3 scripts/generate_xpi.py",
+    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev ; python3 scripts/doctor_firefox_manifest.py",
     "package": "plasmo package",
     "api:local": ". .venv/bin/activate ; cd api ; chalice local"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.10.3",
+    "@mantine/hooks": "^5.10.3",
     "plasmo": "0.64.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
     "@types/chrome": "0.0.210",
     "@types/node": "18.11.18",
