--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
+    "@tabler/icons-react": "^2.3.0",
     "plasmo": "0.64.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
