--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "summarizer",
   "displayName": "Kagi Summarizer",
-  "version": "0.0.2",
-  "description": "An article summarizer utilizing https://labs.kagi.com/ai/sum",
+  "version": "0.1.0",
+  "description": "An article summarizer utilizing https://kagi.com/summarizer/index.html",
   "author": "stephanfitzpatrick",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev ; python3 scripts/doctor_firefox_manifest.py",
-    "package": "plasmo package",
-    "api:local": ". .venv/bin/activate ; cd api ; chalice local"
+    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev",
+    "package": "plasmo package"
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
-    "@mantine/core": "^5.10.3",
-    "@mantine/hooks": "^5.10.3",
+    "@mantine/core": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@plasmohq/storage": "^1.5.0",
     "@tabler/icons-react": "^2.3.0",
-    "plasmo": "0.64.5",
+    "plasmo": "^0.68.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
