--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev",
+    "build:firefox:dev": "npx plasmo build --target=firefox-mv2 --tag=dev ; ./scripts/doctor_firefox_manifest.py",
     "package": "plasmo package"
   },
   "dependencies": {
