--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -31,4 +31,4 @@ jobs:
         uses: PlasmoHQ/bpp@v3
         with:
           keys: ${{ secrets.SUBMIT_KEYS }}
-          artifact: build/chrome-mv3-prod.zip
+          verbose: true
