--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -7,26 +7,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Cache pnpm modules
+      - name: Cache Yarn packages
         uses: actions/cache@v3
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: ~/.yarn-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-
-      - uses: pnpm/action-setup@v2.2.4
-        with:
-          version: latest
-          run_install: true
+      - name: Install Yarn
+        run: npm install -g yarn
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3.4.1
         with:
           node-version: 16.x
-          cache: "pnpm"
+          cache: "yarn"
+      - name: Install dependencies
+        run: yarn install
       - name: Build the extension
-        run: pnpm build
+        run: yarn build
       - name: Package the extension into a zip artifact
-        run: pnpm package
+        run: yarn package
+      - name: Change directory and create zip artifact
+        run: |
+          cd build/firefox-mv2-prod
+          zip -r ../firefox-mv2-prod.zip .
       - name: Browser Platform Publish
         uses: PlasmoHQ/bpp@v3
         with:
